# keep-esp32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  test_kfp.c  test_native_frost.c
.github/workflows/: ci.yml  release.yml
components/crypto_asm/: CMakeLists.txt  ct_compare.S  ct_select.S  secure_memzero.S
components/crypto_asm/include/: crypto_asm.h
components/libnostr-c/: CMakeLists.txt  idf_component.yml  nostr_features.h
components/libnostr-c/include/cjson/: cJSON.h
components/libnostr-c/include/noscrypt/: noscrypt.h  noscryptutil.h
components/noscrypt/: CMakeLists.txt  idf_component.yml
components/noscrypt/include/noscrypt/: noscrypt.h  noscryptutil.h  platform.h
components/noscrypt/include/secp256k1/include/: secp256k1.h  secp256k1_ecdh.h  secp256k1_extrakeys.h  secp256k1_schnorrsig.h
components/secp256k1-frost/: CMakeLists.txt  esp_random_adapter.c  idf_component.yml
components/secp256k1-frost/include/: secp256k1_frost_esp.h
docs/: index.html  manifest.json
main/: CMakeLists.txt  Kconfig.projbuild  frost.c  frost.h  frost_coordinator.c  frost_coordinator.h  frost_dkg.c  frost_dkg.h  frost_signer.c  frost_signer.h  idf_component.yml  kfp.c  kfp.h  main.c  nostr.c  nostr_client.h  nostr_frost.c  nostr_frost.h  protocol.c  protocol.h  provision.c  provision.h  serial.c  serial.h  session.c  session.h  storage.c  storage.h
scripts/: monitor_serial.py  test_all_rpc.py  test_dkg_full.py  test_dkg_relay.py
test/hardware/: test_hardware.py
test/integration/: test_full_flow.sh
test/native/: CMakeLists.txt  test_frost.c  test_protocol.c
tests/: Makefile.test  run_qemu_test.sh  test_firmware_flow.c  test_frost_native.c  test_qemu.py  test_rpc.py
